# gpsami

./: .gitignore  AUTHORS  Cargo.toml  Makefile.am  NEWS  README  README.md  configure.ac
data/: gpsami.desktop.in
doc/: devices.md
src/: devices.json  devices.rs  drivers.rs  gpsbabel.rs  main.rs  mgapplication.rs  mgwindow.ui  utils.rs
