[package]
name = "magellan"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]

[dependencies]
glib-sys = { git = "https://github.com/gtk-rs/sys" }
glib = { version="0.1.0", git="https://github.com/gtk-rs/glib", features = ["v2_40"] }
gio = { git="https://github.com/gtk-rs/gio" }
gtk = { git="https://github.com/gtk-rs/gtk", features = ["v3_12"] }
rustc-serialize = "0.3"


[[bin]]
name = "magellan"

